feat 트랜잭션 AOP 주의사항 1-1

--- a/md/01.Transaction.md
+++ b/md/01.Transaction.md
@@ -2,3 +2,78 @@
 > @Transactional 을 통해 트랜잭션 방식을 사용하면, 단순히 에너테이션 하나로 트랜잭션을 적용할 수 있다.
 > 다만 이 기능은 트랜잭션 코드가 눈으로 보이지 않고, AOP 기반으로 동작하기 때문에, 실제 트랜잭션이 적용되었는지를 판단하기 힘들다.
 
+```java
+
+package com.transaction.apply;
+
+import lombok.extern.slf4j.Slf4j;
+import org.assertj.core.api.Assertions;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
+import org.springframework.aop.support.AopUtils;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.test.context.TestConfiguration;
+import org.springframework.context.annotation.Bean;
+import org.springframework.transaction.support.TransactionSynchronization;
+import org.springframework.transaction.support.TransactionSynchronizationManager;
+
+import javax.transaction.Transactional;
+
+@Slf4j
+@SpringBootTest
+public class TxBasicTest {
+
+    @Autowired
+    BasicService basicService;
+
+    @Test
+    @DisplayName("트랜잭션 탔니")
+    void 트랜잭션_탔니() {
+        log.info("aop class 는={}", basicService.getClass());
+        Assertions.assertThat(AopUtils.isAopProxy(basicService)).isTrue();
+    }
+
+    @Test
+    @DisplayName("둘다_호출할꺼야")
+    void 둘다_호출할꺼야() {
+        basicService.tx();
+        basicService.nonTx();
+    }
+
+    @TestConfiguration
+    static class TxApplyBasicConfig {
+
+        @Bean
+        BasicService basicService() {
+            return new BasicService();
+        }
+    }
+
+    @Slf4j
+    static class BasicService {
+
+        @Transactional
+        public void tx() {
+            log.info("call tx");
+            final boolean txActive = TransactionSynchronizationManager.isActualTransactionActive();
+            log.info("isTransaction={}", txActive);
+        }
+
+        public void nonTx() {
+            log.info("call non tx");
+            final boolean transactionActive = TransactionSynchronizationManager.isActualTransactionActive();
+            log.info("transactionActive={}", transactionActive);
+        }
+    }
+}
+
+```
+
+실행 결과
+> Getting transaction for [com.transaction.apply.TxBasicTest$BasicService.tx]
+ call tx
+ isTransaction=true
+ Completing transaction for [com.transaction.apply.TxBasicTest$BasicService.tx]
+ call non tx
+ transactionActive=false
